Fixed bug#5661 - In Global Ticket Overview, with IE7 and L-Mode, Hover of first Ticket overlaps Action Row Area, added pixels to margin in css for IE7 to fix it.

--- a/var/httpd/htdocs/skins/Agent/default/css/Core.OverviewLarge.IE7.css
+++ b/var/httpd/htdocs/skins/Agent/default/css/Core.OverviewLarge.IE7.css
@@ -1,6 +1,6 @@
 /**
  * @project     OTRS (http://www.otrs.org) - Agent Frontend
- * @version     $Revision: 1.2 $
+ * @version     $Revision: 1.3 $
  * @copyright   OTRS AG
  * @license     AGPL (http://www.gnu.org/licenses/agpl.txt)
  * @css-for     IE7
@@ -18,7 +18,7 @@
  */
  
 #TicketOverviewLarge {
-    margin-top: 42px;    
+    margin-top: 50px;
 }
 
 .OverviewLarge .Preview li {
